--- a/MainPage.html
+++ b/MainPage.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
     <!-- Linking style.css -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="main.css">
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,7 +22,7 @@
         <!-- Navbar from Bootstrap -->
 
         <!-- Whole bar -->
-        <nav class="navbar navbar-expand-lg bg-light">
+        <nav class="navbar navbar-expand-xl navbar-dark bg-dark">
 
             <!-- Inside the Bar -->
             <div class="container-fluid">
@@ -39,23 +39,22 @@
                   <li class="nav-item">
                     <a class="nav-link active" href="MainPage.html">Home</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" href="MainPage.html"> About Me </a>
-                  </li>
+
                   <li class="nav-item">
                     <a class="nav-link active" href="Experience.html"> Experience </a>
                   </li>
+
                   <li class="nav-item">
                     <a class="nav-link active" href="#"> Extracurriculars </a>
                   </li>
 
                   <li class="nav-item">
-                    <a class="nav-link active" href="#"> Resume </a>
+                    <a class="nav-link active" href="Keith_Ho_Resume.pdf"> Resume </a>
                   </li>
 
                   <li class="nav-item">
                     <a class="nav-link" href="https://github.com/KeithDHo/"> 
-                      <img src="Pictures/Github.png" alt="Github" width="25px" height="25px">
+                      <img src="Pictures/Github.png" class="Github" alt="Github" width="25px" height="25px">
                     </a>
                   </li>
 
@@ -72,7 +71,9 @@
     </header>
 
     <div class="AboutMe">
-        <h3> About Me </h3>
+        <div class="Header">
+          <h2> About Me </h2>
+        </div>
         <div class="Intro">
           <img src="Pictures/Me.jpg" height="400" class="Portrait">
             <p class="SelfIntro">
