Fixed Alignment in Cards

--- a/Experience.html
+++ b/Experience.html
@@ -75,8 +75,8 @@
 
             <!-- Bootstrap Cards  -->
             <div class="card" style="width: 22rem;">
-                <img src="Pictures/HCL.png" class="card-img-top HCLimg" alt="HCL">
-                <div class="card-body">
+                <img src="Pictures/HCL.png" class="card-img-top HCLImg" alt="HCL">
+                <div class="card-body HCLText">
                   <h5 class="card-title"> HCL Technologies </h5>
                   <p class="card-text"> 
                     Software Engineer Intern 
@@ -84,7 +84,7 @@
                     Jan 2022 - May 2022
                   </p>
                   <p class="HCLDescription">
-                    Researched different computer vision models and trained one to detect and identify traffic lights. Successfully detected some traffic lights and identified them. 
+                    Researched different computer vision models and trained one with a custom dataset to detect and identify traffic lights in an urban environment.
                   </p>
                   <a href="https://github.com/KeithDHo/HCL-Traffic-Light-Detection/blob/main/traffic-light-detection.ipynb" class="btn btn-primary"> Project Link </a>
                 </div>
@@ -92,7 +92,7 @@
     
             <div class="card" style="width: 22rem;">
                 <img src="Pictures/Depop.png" class="card-img-top" alt="Depop">
-                <div class="card-body">
+                <div class="card-body DepopText">
                   <h5 class="card-title"> Depop Mobile App Redesign </h5>
                   <p class="card-text"> 
                     UI/UX Design & Research 
@@ -106,10 +106,20 @@
                 </div>
             </div>
 
-            <div class="Unemployment">
-                <h3> Mental Illness & Unemployment ! </h3>
-                <h5> Data Science Research </h5>
-                <b> Jun 2021</b>
+            <div class="card" style="width: 22rem;">
+                <img src="Pictures/Mental.png" class="card-img-top" alt="Mental">
+                <div class="card-body MentalText">
+                  <h5 class="card-title"> Mental Illness & Unemployment </h5>
+                  <p class="card-text"> 
+                    Data Science Research 
+                    <br>
+                    Jun 2021
+                  </p>
+                  <p class="MentalDescription">
+                    Researched the correlation between mental illness and unemployment using logistic regression and a 5-fold cross validation. 
+                  </p>
+                  <a href="https://github.com/KeithDHo/Unemployment-Mental-Illness/blob/main/Unemployment%20%26%20Mental%20Illness.ipynb" class="btn btn-primary"> Project Link </a>
+                </div>
             </div>
     
             <div class="Journal">
