--- a/MainPage.html
+++ b/MainPage.html
@@ -45,11 +45,7 @@
                   </li>
 
                   <li class="nav-item">
-                    <a class="nav-link active" href="#"> Extracurriculars </a>
-                  </li>
-
-                  <li class="nav-item">
-                    <a class="nav-link active" href="Keith_Ho_Resume.pdf"> Resume </a>
+                    <a class="nav-link active" href="Resume_Keith_Ho.pdf"> Resume </a>
                   </li>
 
                   <li class="nav-item">
