Changed MainPage --> index.html

--- a/Experience.html
+++ b/Experience.html
@@ -26,7 +26,7 @@
     
                 <!-- Inside the Bar -->
                 <div class="container-fluid">
-                  <a class="navbar-brand" href="MainPage.html"> Keith Ho </a>
+                  <a class="navbar-brand" href="index.html"> Keith Ho </a>
     
                   <!-- Hamburger menu if window is minimized -->
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
