--- a/Experience.html
+++ b/Experience.html
@@ -37,7 +37,7 @@
                     
                     <ul class="navbar-nav ms-auto">
                       <li class="nav-item">
-                        <a class="nav-link active" href="MainPage.html">Home</a>
+                        <a class="nav-link active" href="index.html">Home</a>
                       </li>
     
                       <li class="nav-item">
