Included Background Img

--- a/Experience.html
+++ b/Experience.html
@@ -119,7 +119,7 @@
             </div>
 
             <div class="card" style="width: 22rem;">
-              <img src="Pictures/Bullet.png" class="card-img-top" alt="Bullet">
+              <img src="Pictures/Bullet.png" class="card-img-top BulletImg" alt="Bullet">
               <div class="card-body BulletText">
                 <h5 class="card-title"> Online Bullet Journal </h5>
                 <p class="card-text"> 
